demo link and og tags

--- a/demos/matrix-reloaded/index.html
+++ b/demos/matrix-reloaded/index.html
@@ -3,6 +3,10 @@
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
+	
+	<meta property="og:title" content="Svelte Matrix Reloaded" />
+	<meta property="og:description" content="Svelte implementation of 'Matrix digital rain' effect." />
+	<meta property="og:image" content="https://github.com/bcairns/svelte-experiments/raw/main/matrix-reloaded/screenshot.png" />
 
 	<title>Svelte Matrix Reloaded</title>
 
